[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/character/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/Map.gd" type="Script" id=2]
[ext_resource path="res://assets/x.png" type="Texture" id=3]
[ext_resource path="res://assets/door.png" type="Texture" id=4]
[ext_resource path="res://assets/portal.png" type="Texture" id=5]
[ext_resource path="res://assets/at.png" type="Texture" id=6]
[ext_resource path="res://assets/floor.png" type="Texture" id=7]
[ext_resource path="res://assets/wall.png" type="Texture" id=8]
[ext_resource path="res://assets/panel.png" type="Texture" id=9]
[ext_resource path="res://scenes/GUI.gd" type="Script" id=10]
[ext_resource path="res://scripts/GameManager.gd" type="Script" id=11]

[sub_resource type="TileSet" id=1]
0/name = "FloorW"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Wall"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Door"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Portal"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Enemy"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[node name="root" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
skew = 4.37114e-08
script = ExtResource( 11 )

[node name="Map" type="TileMap" parent="."]
skew = 4.37114e-08
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( 262160, 0, 0, 262161, 4, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327705, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393241, 0, 0, 458768, 0, 0, 458777, 0, 0, 524304, 0, 0, 524313, 0, 0, 524314, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 4, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 4, 0, 589850, 0, 0, 655368, 2, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655383, 4, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 3, 0, 720912, 4, 0 )
script = ExtResource( 2 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 509.188, 299.826 )
skew = 4.37114e-08
script = ExtResource( 1 )
character_name = "Player"

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 6 )
centered = false

[node name="Camera2D" type="Camera2D" parent="Player"]
offset = Vector2( 0, 100 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelMain" type="MarginContainer" parent="CanvasLayer/GUI"]
margin_top = 400.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotPanel" type="NinePatchRect" parent="CanvasLayer/GUI/PanelMain"]
margin_right = 1024.0
margin_bottom = 200.0
texture = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GUI/PanelMain/BotPanel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 78.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer"]
margin_right = 58.0
margin_bottom = 68.0

[node name="Stats" type="VBoxContainer" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container"]
margin_right = 58.0
margin_bottom = 85.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthMargin" type="MarginContainer" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats"]
margin_right = 58.0
margin_bottom = 14.0

[node name="Health" type="HBoxContainer" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/HealthMargin"]
margin_right = 58.0
margin_bottom = 14.0

[node name="HealthLabel" type="Label" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/HealthMargin/Health"]
margin_right = 42.0
margin_bottom = 14.0
text = "Health"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthText" type="Label" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/HealthMargin/Health"]
margin_left = 46.0
margin_right = 54.0
margin_bottom = 14.0
text = "X"

[node name="AtkMargin" type="MarginContainer" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats"]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 32.0

[node name="Atk" type="HBoxContainer" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/AtkMargin"]
margin_right = 58.0
margin_bottom = 14.0

[node name="AtkLabel" type="Label" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/AtkMargin/Atk"]
margin_right = 24.0
margin_bottom = 14.0
text = "ATK"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtkText" type="Label" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/AtkMargin/Atk"]
margin_left = 28.0
margin_right = 36.0
margin_bottom = 14.0
text = "X"

[node name="DefMargin" type="MarginContainer" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats"]
margin_top = 36.0
margin_right = 58.0
margin_bottom = 50.0

[node name="Def" type="HBoxContainer" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/DefMargin"]
margin_right = 58.0
margin_bottom = 14.0

[node name="DefLabel" type="Label" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/DefMargin/Def"]
margin_right = 24.0
margin_bottom = 14.0
text = "DEF"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefText" type="Label" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/DefMargin/Def"]
margin_left = 28.0
margin_right = 36.0
margin_bottom = 14.0
text = "X"

[node name="ConMargin" type="MarginContainer" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats"]
margin_top = 54.0
margin_right = 58.0
margin_bottom = 68.0

[node name="Con" type="HBoxContainer" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/ConMargin"]
margin_right = 58.0
margin_bottom = 14.0

[node name="ConLabel" type="Label" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/ConMargin/Con"]
margin_right = 29.0
margin_bottom = 14.0
text = "CON"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConText" type="Label" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container/Stats/ConMargin/Con"]
margin_left = 33.0
margin_right = 41.0
margin_bottom = 14.0
text = "X"

[node name="Log" type="RichTextLabel" parent="CanvasLayer/GUI/PanelMain/BotPanel/MarginContainer/Container"]
margin_left = 550.0
margin_right = 950.0
margin_bottom = 150.0
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}
